--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -1,7 +1,7 @@
-<div class="row faq">
+<div class="row frequently-asked-questions">
 	<div class="col-sm-8 col-sm-offset-2"
 	<div class="row">
-		<i class="fa fa-faq-circle fa-2x"></i><p class="faq">My posts aren’t previewing!</p>
+		<p class="faq"><i class="fa fa-question-circle"></i>My posts aren’t previewing!</p>
 		<p>
 			<strong>Sometimes, the “Preview” button sends you to page with a URL that looks like this:</strong>
 		</p>
@@ -15,7 +15,7 @@
 		</p>
 		<p><strong>Then you’ll be able to preview your post!<br>
 			We’re looking into a more permanent fix, but this should help for now!</strong></p>
-			<i class="fa fa-faq-circle fa-2x"></i><p class="faq">My photos are too small!</p>
+			<p class="faq"><i class="fa fa-question-circle"></i>My photos are too small!</p>
 			<p>Find the dimensions of the file. On a Mac, Finder will show you the dimensions in the file info:<br>
 				<img alt="" src="/assets/finderdimensions.png">
 				<br>
@@ -26,13 +26,13 @@
 					<iframe src="//player.vimeo.com/video/81032625" width="640" height="400" frameborder="0" title="Photos too small" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" kwframeid="1">
 					</iframe>
 				</p>
-				<i class="fa fa-faq-circle fa-2x"></i><p class="faq">There are weird extra spaces in between my lines in my article!</p>
+				<p class="faq"><i class="fa fa-question-circle"></i>There are weird extra spaces in between my lines in my article!</p>
 				<p>In the post editor, click “Text” in the top right corner.</p>
 				<div id="tab-example">Example</div>
 				<p>Manually delete extra lines in between the text. Return to “Visual” to see how it looks.<br>
 					&nbsp;<br>
 					&nbsp;</p>
-					<i class="fa fa-faq-circle fa-2x"></i><p class="faq">My font is weirdly small!</p>
+					<p class="faq"><i class="fa fa-question-circle"></i>My font is weirdly small!</p>
 					<div class="row-fluid">
 						<div class="span2">
 							<img alt="" src="/assets/paragraph.png">
@@ -42,21 +42,21 @@
 							<p>Still small? Or looking weird? Highlight the text again and click the eraser icon <img alt="" src="/assets/eraser.png"> to clear all formatting and start over.</p>
 						</div>
 					</div>
-					<i class="fa fa-faq-circle fa-2x"></i><p class="faq">I don’t see a broadcast button!</p>
+					<p class="faq"><i class="fa fa-question-circle"></i>I don’t see a broadcast button!</p>
 					<p>That’s probably our fault, but you have to let us know! Email <a href="mackenzie@spoonuniversity.com">mackenzie@spoonuniversity.com</a> or <a href="sarah@spoonuniversity.com">sarah@spoonuniversity.com</a> and tell us you don’t see all 4 broadcast options. We just have to add you as a user to the national site. Easy peasy.</p>
-					<i class="fa fa-faq-circle fa-2x"></i><p class="faq">I only see one row in the toolbar!</p>
+					<p class="faq"><i class="fa fa-question-circle"></i>I only see one row in the toolbar!</p>
 					<p>Click <img alt="" src="/assets/more-button.png">.</p>
-					<i class="fa fa-faq-circle fa-2x"></i><p class="faq">My author name shows up as firstnamelastname!</p>
+					<p class="faq"><i class="fa fa-question-circle"></i>My author name shows up as firstnamelastname!</p>
 					<p>From the dashboard go to “Users” &gt; “Your Profile.” Next to “Display name publicly as”, select First Last from the dropdown window.<br>
-						<i class="fa fa-faq-circle fa-2x"></i><p class="faq">Do we get money for recipes or restaurant reviews (or anything)?</p>
+						<p class="faq"><i class="fa fa-question-circle"></i>Do we get money for recipes or restaurant reviews (or anything)?</p>
 						<p>Nope, sorry.</p>
-						<i class="fa fa-faq-circle fa-2x"></i><p class="faq">What do I do if I’m shooting in the dark?</p>
+						<p class="faq"><i class="fa fa-question-circle"></i>What do I do if I’m shooting in the dark?</p>
 						<p>Is there <em>any way</em> that you can take these photos at a different time when there <em>is</em> natural light? Please, please do that. If not, try to move all of the lights in the room to where you’re shooting. You can move them back later. Don’t have one lamp with piercing light reflecting off of your plate. Be resourceful and creative, and try to edit the photo to account for the darkness.</p>
-						<i class="fa fa-faq-circle fa-2x"></i><p class="faq">What do I do if my photos are yellowed?</p>
+						<p class="faq"><i class="fa fa-question-circle"></i>What do I do if my photos are yellowed?</p>
 						<p>Brighten them, then cool them down with blue tones.</p>
-						<i class="fa fa-faq-circle fa-2x"></i><p class="faq">Do we get any money to work with?</p>
+						<p class="faq"><i class="fa fa-question-circle"></i>Do we get any money to work with?</p>
 						<p>Nope, sorry.</p>
-						<i class="fa fa-faq-circle fa-2x"></i><p class="faq">How the $%&amp;(# do I plan an event with no money?!</p>
+						<p class="faq"><i class="fa fa-question-circle"></i>How the $%&amp;(# do I plan an event with no money?!</p>
 						<p>You could ask each member that joins to pay dues ($5-$15) to cover basic costs like flyers and other promotional materials. Sometimes people have to put up a few dollars to plan the event, but make sure you charge an entrance fee so you’re guaranteed to make that money back. See our guide to planning an event on the cheap <a href="http://secretsauce.spoonuniversity.com/plan-an-event">here</a>.<p class="faq">If we’re not planning an event, what do we do each week?</p>
 						<p>Come up with smaller biweekly campaigns, centered around flyering, tabling, charity work, fundraisers, etc. See our list of free or low cost marketing ideas <a href="marketing/business-director/free_ideas">here</a>.</p>
 					</div>
