--- a/app/views/positions/marketing/_analytics.html.erb
+++ b/app/views/positions/marketing/_analytics.html.erb
@@ -1,11 +1,12 @@
 
 <div class="row">
+  <p>We use Google Analytics to track visitors to the site. Because Spoon is a Wordpress Multisite, it can be a little bit tricky to navigate through the analytics. Here's a quick way to separate your analytics from everyone else's.</p>
   <div class="col-sm-6">
     <iframe src="//player.vimeo.com/video/79911642" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 
   <div class="col-sm-6">
-    <p>PUT IT INTO PRACTICE:<p>
+    <p class="small-caps">PUT IT INTO PRACTICE:<p>
     <ol>
     <li>
       <p>Log into Google Analytics.<p>
@@ -25,21 +26,5 @@
       If you change the primary dimension back to “Page”, change the secondary dimension to “hostname.” This will let you navigate through pages on specific sites.
     </li>
     </ol>
-  </div>
-</div>
-
-
-
-
-  <div class="col-sm-6">
-    PUT IT INTO PRACTICE:
-    <ul>
-      <ol>In a web browser, type in your school’s URL, followed by /wp-login.php</br>
-      <strong>(e.g. myschool.spoonuniversity.com/wp-login.php)</strong></ol>
-      <ol>Enter your username and password and click log in.</ol>
-    </ul>
-  </div>
-  <div class="col-sm-6">
-    <iframe src="//player.vimeo.com/video/79439549" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 </div>
