--- a/app/views/positions/marketing/_plan_an_event.html.erb
+++ b/app/views/positions/marketing/_plan_an_event.html.erb
@@ -1,40 +1,34 @@
+<p>One of the primary jobs of the marketing team is to host kick-ass parties! This is fun for you and fun for everyone who comes, and the sky’s the limit (er, that and money). Scroll to the right to see the steps to the perfect party:</p>
 
-<p>
-  One of the primary jobs of the marketing team is to host kick-ass parties! This is fun for you and fun for everyone who comes, and the sky’s the limit (er, that and money).
-</p>
-<p>
-  SCROLL TO THE RIGHT TO VIEW THE STEPS TO THE PERFECT PARTY.
-</p>
+<i class="fa fa-arrows-h fa-3x"></i>
 
-
-STEP 1
-
-FIND FREE SPACE
-It has to be <strong>big enough</strong> to hold a lot of people, <strong>close enough</strong> so people are willing to go. Ideally a place that students are familiar with.
-
-STEP 2
-
-FOOD
-If you’re trying to get free food, start early. Email, call and visit restaurants <strong>(yes, all three)</strong> to request donations for the launch event. Tell them it’ll be great for business Be relentless, and get a ton of food.
-
-<</strong>strong>No one wants to give you food?</strong> Suggest they set up a booth at the event and charge students $1-$5 for bites.
-
-STEP 3
-
-TICKETS
-Sell tickets before the event for a discounted price and <strong>at the door for slightly more</strong>. To avoid free food hoarders, give each person 2 food tickets at the door. They can get 2 free food items, and if they want more food they have to go back to the front to purchase more tickets.
-
-STEP 4
-
-MUSIC
-Find student DJs, bands and a capella groups to perform at the event.
-
-
-STEP 5
-
-ACTIVITIES
-Give people something to do!
-<ul>
+<div class="timeline-window clearfix plan-a-party">
+  <div class="timeline-wrapper clearfix">
+  <div class="timeline-step" id="step-1">
+<p class="label">STEP 1</p><br>
+<h4>FIND FREE SPACE</h4>
+<p>It has to be <strong>big enough</strong> to hold a lot of people, <strong>close enough</strong> so people are willing to go. Ideally a place that students are familiar with.</p>
+</div>
+<div class="timeline-step">
+<p class="label">STEP 2</p><br>
+<h4>FOOD</h4>
+<p>If you’re trying to get free food, start early. Email, call and visit restaurants <strong>(yes, all three)</strong> to request donations for the launch event. Tell them it’ll be great for business Be relentless, and get a ton of food.</p>
+<p></strong>strong>No one wants to give you food?</strong> Suggest they set up a booth at the event and charge students $1-$5 for bites.</p>
+  </div>
+  <div class="timeline-step">
+<p class="label">STEP 3</p><br>
+<h4>TICKETS</h4>
+<p>Sell tickets before the event for a discounted price and <strong>at the door for slightly more</strong>. To avoid free food hoarders, give each person 2 food tickets at the door. They can get 2 free food items, and if they want more food they have to go back to the front to purchase more tickets.</p>
+  </div>
+  <div class="timeline-step">
+<p class="label">STEP 4</p><br>
+<h4>MUSIC</h4>
+<p>Find student DJs, bands and a capella groups to perform at the event.</p>
+  </div>
+  <div class="timeline-step">
+<p class="label">STEP 5</p><br>
+<h4>ACTIVITIES</h4>
+<ul class="list-unstyled">
   <li>
     Whipping cream contest
   </li>
@@ -54,12 +48,16 @@ Give people something to do!
     Raffles (guess the amount of candies in a jar, enter your email to win a Spoon shirt, restaurant gift card, etc.)
   </li>
 </ul>
-STEP 6
-
-PROMOTE
-<strong>Team up</strong> with another student group to have them help you promote. <strong>Post fliers</strong> all over campus the week before the event. Create a <strong>Facebook event</strong>. Make a <strong>promo video</strong> in anticipation of the event. Have everyone on staff change their <strong>profile pictures</strong> and cover photos for the event. Make sorority and fraternity <strong>chapter announcements</strong>.
-
-STEP 7
-
-EXTRA OOMPF
-Have all staff members wear Spoon swag at event. Give away stickers, big wooden spoons, etc.. Hand out cards with healthy eating tips to each guest as they leave. Collect email addresses of every guest to add to newsletter.
+  </div>
+  <div class="timeline-step">
+<p class="label">STEP 6</p><br>
+<h4>PROMOTE</h4>
+<p><strong>Team up</strong> with another student group to have them help you promote. <strong>Post fliers</strong> all over campus the week before the event. Create a <strong>Facebook event</strong>. Make a <strong>promo video</strong> in anticipation of the event. Have everyone on staff change their <strong>profile pictures</strong> and cover photos for the event. Make sorority and fraternity <strong>chapter announcements</strong>.</p>
+  </div>
+  <div class="timeline-step">
+<p class="label">STEP 7</p><br>
+<h4>EXTRA OOMPF</h4>
+<p>Have all staff members wear Spoon swag at event. Give away stickers, big wooden spoons, etc.. Hand out cards with healthy eating tips to each guest as they leave. Collect email addresses of every guest to add to newsletter.</p>
+  </div>
+</div>
+</div>
