--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -124,7 +124,9 @@
 		      <div class="<%= track %>">
 		      	<h4 class="quiz-title"><strong><%= score.page.name %></strong></h4>
 		      	<div class="quiz-score"><%= score.percent_correct %>%</div><br>
+		      	<% if current_user.position.pages.include?(score.page) %>
 		      	<a class="retake" href="/<%= track %>/<%= current_user.position.shortname %>/<%= score.page.shortname %>">RETAKE</a>
+		      	<% end %>
 		      </div>
    	  <% end %>
 		</div>
