--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -3,8 +3,8 @@
   <thead>
     <tr>
       <th>Sort:</th>
-      <th><%= link_to "A-Z", sort_by_path('last_name')%></th>
-      <th><%= link_to "School", sort_by_path('school_id')%></th>
+      <th><%= link_to "Name", sort_by_path('name')%></th>
+      <th><%= link_to "School", sort_by_path('school')%></th>
       <th><%= link_to "Position", sort_by_path('position')%></th>
     </tr>
   </thead>
