--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
 <!--  SEE YOUR RESPONSIBILITIES *******************************************************      -->
 <div class="row">
-	<div <% if current_user.scores.empty? %> class="col-sm-10 col-sm-offset-1"<% end %> >
+	<div class="col-sm-10 col-sm-offset-1" <% if current_user.scores.empty? %> class="col-sm-10 col-sm-offset-1"<% end %> >
 <div class="row">
 	<div class="col-md-12">
 		<h1 class="semi-super">So, <%= current_user.first_name %>... you're the <%= current_user.status.position.name %> at <a class="link" href="schools/<%= current_user.school.shortname %>"><%= current_user.school.name %></a>.</h1>
@@ -102,8 +102,6 @@
 
 
 	<!-- GET STARTED *******************************************************      -->
-	
-
 
 	<% if current_user.status.pages.count == 0 %>
 		<a class="btn btn-primary btn-lg <%= current_user.track %>" href="<%= current_user.track %>/<%= current_user.position.shortname %>/<% if current_user.position.next_page(current_user.last_page) %><%= current_user.position.next_page(current_user.last_page).shortname %><% else %><%= current_user.position.pages.first.shortname %><% end %>">Get Started!</a>
