avoided agree page on second try

--- a/app/views/positions/editorial/_update_staff.html.erb
+++ b/app/views/positions/editorial/_update_staff.html.erb
@@ -1,7 +1,7 @@
 
 <p>You need to be sure to keep your Staff page updated — everyone deserves credit for the work they do!</p>
 <div class="row">
-  <div class="col-md-8 col-md-offset-2"
+  <div class="col-md-8 col-md-offset-2">
 <p class="small-caps">TRY IT NOW:</p>
 
 <ol> 
