--- a/app/views/positions/editorial/_add_user.html.erb
+++ b/app/views/positions/editorial/_add_user.html.erb
@@ -16,17 +16,21 @@
       </li>
     </ol>
     <p>User should follow the instructions in the confirmation email.<p>
-  <div class="box">
-    <p>ROLES</p>
-    <ul class="list-unstyled">
-      <li>Editor-in-chief should be admin</li>
-      <li>Editors should be editors</li>
-      <li>Writers should be authors</li>
-    </ul>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="box">
+            <p class="box-label">ROLES</p>
+            <ul class="list-unstyled">
+              <li>Editor-in-chief should be admin</li>
+              <li>Editors should be editors</li>
+              <li>Writers should be authors</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-7">
+      <iframe src="//player.vimeo.com/video/74733427" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
   </div>
-  </div>
-  <div class="col-sm-7">
-    <iframe src="//player.vimeo.com/video/74733427" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-</div>
 
