trying to figure out mailchimp

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,2 +1,8 @@
-<h1 class="super">Welcome to Spoon University</h1>
-<a class="btn btn-primary" href="/">Continue to Home</a>
+<div class="little-space"></div>
+<div class="row">
+	<div class="col-md-8 col-md-offset-2">
+		<h1 class="super">Welcome to Spoon University</h1>
+		<h3>You were just signed up for the newsletter! Be sure to check your email and click 'confirm'. If you didn't get the email, send a quick note to sarah@spoonuniversity.com.</h3>
+		<a class="btn btn-primary btn-lg" href="/">Continue to Home</a>
+	</div>
+</div>
