added page shortname to score table

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -127,7 +127,7 @@
 				<div class="quiz-wrapper">
 			    <% current_user.scores.each do |score| %>
 				      <div class="<%= track %>">
-				      	<h4 class="quiz-title"><strong><%= score.page.name %></strong></h4>
+				      	<h4 class="quiz-title"><strong><%= score.quiz_name %></strong></h4>
 				      	<div class="quiz-score"><%= score.percent_correct %>%</div><br>
 				      	<% if current_user.position.pages.include?(score.page) %>
 				      	<a class="retake" href="/<%= track %>/<%= current_user.position.shortname %>/<%= score.page.shortname %>">RETAKE</a>
