--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
     <div class="list-group">
       <a class="list-group-item" href="<%= edit_user_registration_path %>">Edit Profile</a>
       <a class="list-group-item" href="<%= track_path_helper(current_user)%>">My Track</a>
-      <a class="list-group-item" href="#">Publishing Spreadsheet</a>
+      <a class="list-group-item" href="/editorial/writer/chapter_spreadsheet">Publishing Spreadsheet</a>
       <a class="list-group-item" href="<%= faq_path %>">FAQ</a>
       <a class="list-group-item" href="/marketing/business-director/marketing_materials">Brand Assets</a>
       <a class="list-group-item border-top" href="<%= positions_path %>">Position Directory</a>
