--- a/app/views/positions/editorial/_chapter_spreadsheet.html.erb
+++ b/app/views/positions/editorial/_chapter_spreadsheet.html.erb
@@ -1,11 +1,6 @@
-
-<p>You can access the spreadsheet in Google Drive <a target="_blank" href="https://docs.google.com/spreadsheet/ccc?key=0Au6DS9B6X4_RdGRVS0xZU1BGdEZPS1BRX3FxeWkzd0E#gid=2">here</a>.
-The publishing spreadsheet will be used to keep track of the status of every article. It’s color-coded so you can see at a glance which articles have been published and which need to move forward more quickly. It’s a bit confusing, so ask Mackenzie any questions you have.</p>
-
-
-
-<!-- SPREADSHEET GOES HERE
-
-http://secretsauce.spoonuniversity.com/publishing-spreadsheet/
-
- -->
+<div class="row">
+	<div class="col-sm-6 col-sm-offset-3">
+		<p>You can access the spreadsheet in Google Drive <a target="_blank" href="https://docs.google.com/spreadsheet/ccc?key=0Au6DS9B6X4_RdGRVS0xZU1BGdEZPS1BRX3FxeWkzd0E#gid=2">here</a>.
+			The publishing spreadsheet will be used to keep track of the status of every article. It’s color-coded so you can see at a glance which articles have been published and which need to move forward more quickly. It’s a bit confusing, so ask Mackenzie any questions you have.</p>
+		</div>
+	</div>
