--- a/app/views/positions/marketing/_calendar.html.erb
+++ b/app/views/positions/marketing/_calendar.html.erb
@@ -1,3 +1,6 @@
-
-<p>Each school has a Google Calendar that should include events, food “holidays”, free food offerings or anything else food related in and around campus. <i>Everyone</i> on staff should submit ideas <i>regularly</i> to the Online Marketing Director, who will be in charge of updating the calendar.</p>
-<p>If you don't have access to the calendar, email Sarah and tell her the Google account that you want to use to manage your school's calendar.</p>
+<div class="row">
+	<div class="col-sm-6 col-sm-offset-3">
+		<p>Each school has a Google Calendar that should include events, food “holidays”, free food offerings or anything else food related in and around campus. <i>Everyone</i> on staff should submit ideas <i>regularly</i> to the Online Marketing Director, who will be in charge of updating the calendar.</p>
+		<p>If you don't have access to the calendar, email Sarah and tell her the Google account that you want to use to manage your school's calendar.</p>
+	</div>
+</div>
