--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
 <!--  SEE YOUR RESPONSIBILITIES *******************************************************      -->
 <div class="row">
-<div <% if current_user.scores.empty? %> class="col-sm-10 col-sm-offset-1"<% end %> >
+<div <% if current_user.scores.empty? %> class="col-xs-12 col-sm-10 col-sm-offset-1"<% end %> >
 <div class="row">
 	<div class="col-md-12">
 		<h1 class="semi-super">So, <%= current_user.first_name %>... you're the <%= current_user.status.position.name %> at <a class="link" href="schools/<%= current_user.school.shortname %>"><%= current_user.school.name %></a>.</h1>
@@ -84,13 +84,13 @@
 
 
 			<div class="row <%= current_user.track %>">
-				<div class="col-sm-5 col-sm-offset-1">
+				<div class="col-sm-5 col-sm-offset-1 col-xs-6">
 					<div class="circle">
 						<div class="number">1</div>
 					</div>
 					<p class="center">Watch the videos on your track (designed specifically for your role!). All of the videos are only about <strong>one minute!</strong></p>
 				</div>
-				<div class="col-sm-5">
+				<div class="col-sm-5 col-xs-6">
 					<div class="circle">
 						<div class="number">2</div>
 					</div>
