--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </script>
   <% end %>
 
+
+<meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+
  <!--   fonts/styles/jquery  -->
   <script type="text/javascript" src="//use.typekit.net/pmb1dkw.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
