--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,7 +2,6 @@ html body {
 	height: 100%;
 	font-size: 16px;
 	line-height: 22px;
-	margin-left: -50px;
 }
 
 .addendum {
@@ -276,13 +275,13 @@ h1, h2, h3, h4, h5 {
 }
 
 .super {
-	font-size: 80px;
-	line-height: 90px;
+	font-size: 40px;
+	line-height: 45px;
 }
 
 .semi-super {
-	font-size: 60px;
-	line-height: 65px;
+	font-size: 30px;
+	line-height: 35px;
 }
 
 .track-nav li {
@@ -696,12 +695,19 @@ a.retake{
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
-	html body {
-		margin-left: 0px;
-	}
 
 	body {
 		padding-top: 0px;
+	}
+
+	.super {
+		font-size: 80px;
+		line-height: 90px;
+	}
+
+	.semi-super {
+		font-size: 60px;
+		line-height: 65px;
 	}
 
 
