--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -60,7 +60,7 @@
   </div>
   <div class="form-group">
     <label for="position_id">Position</label>
-    <%= select_tag(:position_id, options_from_collection_for_select(@positions, "id", "name") ) %>
+    <%= select_tag(:position_id, options_from_collection_for_select(@positions, "id", "name", selected: current_user.position.id) ) %>
   </div>
   <% end %>
 
