--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <% end %>
 
 
-<meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=0.9;">
 
  <!--   fonts/styles/jquery  -->
   <script type="text/javascript" src="//use.typekit.net/pmb1dkw.js"></script>
