sorting school staff

--- a/app/views/positions/photo/_photo_process.html.erb
+++ b/app/views/positions/photo/_photo_process.html.erb
@@ -27,14 +27,14 @@ The photographer edits photos and chooses a handful of their best ones.
 	<div class="timeline-step">
 <p class="label">STEP 5</p><br>
 
-The writer notifies the copyeditor that the story is ready to go, and the copyeditor edits for grammar, obvious mistakes and things thThe photographer uploads the photos to <a class="link" href="/photo/<% @position %>/flickr">Flickr</a> and labels the tags properly.
-at just don’t make sense.
+The writer notifies the copyeditor that the story is ready to go, and the copyeditor edits for grammar, obvious mistakes and things that just don’t make sense. Then the photographer uploads the photos to <a class="link" href="/photo/<% @position %>/flickr">Flickr</a> and labels the tags properly.
+
 	</div>
 	<div class="timeline-step">
 <p class="label">STEP 6</p><br>
 
 The photographer emails the photo director when the photos are uploaded to Flickr.
-y edits, and refines the title and subtitle to be killer. If the story has major issues, it’s sent back to writer.
+The copyeditor edits and refines the title and subtitle to be killer. If the story has major issues, it’s sent back to writer.
 	</div>
 	<div class="timeline-step">
 <p class="label">STEP 7</p><br>
