--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -31,7 +31,7 @@ html body {
 }
 
 .btn.btn-primary:hover {
-	background-color: #cc0066;
+	background-color: #f1a003;
 }
 
 .btn.btn-primary.editorial:hover {
